布布的网站-2019.1.1-spring-servlet.xml配置文档编写

--- a/src/resources/data/md/2.springmvc视图配置.md
+++ b/src/resources/data/md/2.springmvc视图配置.md
@@ -9,7 +9,7 @@
 ````
 
 ## 2. 开启注解功能并设置请求编码为UTF-8
-```
+```spring-servlet.xml
 <!--开启MVC注解功能-->
 <mvc:annotation-driven>
     <!--数据转换-->
@@ -34,4 +34,33 @@
         </bean>
     </mvc:message-converters>
 </mvc:annotation-driven>
+```
+
+## 3. 使用注解Controller层
+
+```spring-servlet.xml
+<!--扫描到的类，可以使用注解-->
+<context:component-scan base-package="code.com.bubu.*.controller">
+    <context:include-filter type="annotation" expression="org.springframework.stereotype.Controller"/>
+</context:component-scan>
+```
+
+## 4. HTML视图配置
+```spring-servlet.xml
+<!--视图配置-->
+<bean id="freeMarkerConfigurer" class="org.springframework.web.servlet.view.freemarker.FreeMarkerConfigurer">
+    <property name="templateLoaderPaths">
+        <list>
+            <value>/WEB-STATIC/</value>
+        </list>
+    </property>
+    <property name="defaultEncoding" value="UTF-8"/>
+</bean>
+
+<bean id="freeMarkerViewResolver" class="org.springframework.web.servlet.view.freemarker.FreeMarkerViewResolver">
+    <property name="viewClass" value="org.springframework.web.servlet.view.freemarker.FreeMarkerView"/>
+    <property name="suffix" value=".html"/>
+    <property name="contentType" value="text/html;charset=UTF-8"/>
+    <property name="order" value="0"/>
+</bean>
 ```
