配置数据源

--- a/src/resources/data/md/3.数据源和事物配置.md
+++ b/src/resources/data/md/3.数据源和事物配置.md
@@ -1,4 +1,7 @@
 ## 1. 数据源配置
+
+> 如果数据库使用的是mysql8.0以上版本，需要在数据库连接后加入时区和ssl参数，如：`jdbc:mysql://localhost/bubu?serverTimezone=UTC&useSSL=false` ，如果是java链接，而不是spring配置，参数之间可以能需要使用分隔符`&amp;`分割。
+
 ```spring-resources.xml
 <context:property-placeholder location="classpath*:/resources/config/jdbc.properties"/>
 
